# cc-edit-jp-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: HTTP_TRANSPORT_GUIDE.md  INDENT_CONVERSION_GUIDE.md  QUICK_START_HTTP.md
examples/: http_transport_examples.py
src/claude_edit_mcp/: __init__.py  indent_converter.py  main.py  server.py
