[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-edit-mcp"
version = "0.1.0"
description = "MCP server for handling UTF-8 Japanese text file editing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
claude-edit-mcp = "claude_edit_mcp.main:main"
claude-edit-mcp-stdio = "claude_edit_mcp.main:main_stdio"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
